force-app/main/default/objects/PurchaseOrderLineItem__c/PurchaseOrderLineItem__c.object-meta.xml
<CustomObject>
    <label>본사발주상세</label>
    <pluralLabel>Purchase Order Line Items</pluralLabel>
    <nameField>
        <displayFormat>OI{YY}{MM}{DD}{0000}</displayFormat>
        <label>PO Line Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>