force-app/main/default/objects/PurchaseOrderLineItem__c/fields/ContractLineItemId__c.field-meta.xml
<CustomField>
    <fullName>ContractLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line Item</label>
    <referenceTo>ContractLineItem__c</referenceTo>
    <relationshipLabel>Purchase Order Line Item</relationshipLabel>
    <relationshipName>ContractLineItemId</relationshipName>
    <type>Lookup</type>
</CustomField>