force-app/main/default/objects/PurchaseOrderLineItem__c/fields/DeliveryCondition__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCondition__c</fullName>
    <formula>TEXT(PurchaseOrder__r.DeliveryCondition__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Condition</label>
    <type>Text</type>
</CustomField>