force-app/main/default/objects/PurchaseOrderLineItem__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <formula>PurchaseOrder__r.DeliveryDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>