force-app/main/default/objects/PurchaseOrderLineItem__c/fields/InspectionQuantity__c.field-meta.xml
<CustomField>
    <fullName>InspectionQuantity__c</fullName>
    <label>Inspection Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>