force-app/main/default/objects/PurchaseOrderLineItem__c/fields/InspectionRequestAmount__c.field-meta.xml
<CustomField>
    <fullName>InspectionRequestAmount__c</fullName>
    <description>Inspection Request Amount</description>
    <formula>UnitPrice__c *  InspectionQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Request Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>