force-app/main/default/objects/PurchaseOrderLineItem__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>IF(Quantity__c == ReceiptQuantity__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>