force-app/main/default/objects/PurchaseOrderLineItem__c/fields/IsDirectOrder__c.field-meta.xml
<CustomField>
    <fullName>IsDirectOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Order</label>
    <type>Checkbox</type>
</CustomField>