force-app/main/default/objects/PurchaseOrderLineItem__c/fields/LiquidatedDamagesAmount__c.field-meta.xml
<CustomField>
    <fullName>LiquidatedDamagesAmount__c</fullName>
    <label>Liquidated Damages Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>