force-app/main/default/objects/PurchaseOrderLineItem__c/fields/LiquidatedDamagesRate__c.field-meta.xml
<CustomField>
    <fullName>LiquidatedDamagesRate__c</fullName>
    <label>Liquidated Damages Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>