force-app/main/default/objects/PurchaseOrderLineItem__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <formula>PurchaseOrder__r.OrderDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>