force-app/main/default/objects/PurchaseOrderLineItem__c/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <formula>TEXT(PurchaseOrder__r.PaymentCondition__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Condition</label>
    <type>Text</type>
</CustomField>