force-app/main/default/objects/PurchaseOrderLineItem__c/fields/PaymentRate__c.field-meta.xml
<CustomField>
    <fullName>PaymentRate__c</fullName>
    <description>Payment Rate</description>
    <formula>IF(TotalAmount__c = 0, 0, TotalCumulativeAmount__c / TotalAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>