force-app/main/default/objects/PurchaseOrderLineItem__c/fields/ProductGroupLevel1__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupLevel1__c</fullName>
    <formula>ProductId__r.ProductGroupLevel1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group Level1</label>
    <type>Text</type>
</CustomField>