force-app/main/default/objects/PurchaseOrderLineItem__c/fields/ProductGroupLevel3__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupLevel3__c</fullName>
    <formula>ProductId__r.ProductGroupLevel3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group Level3</label>
    <type>Text</type>
</CustomField>