force-app/main/default/objects/PurchaseOrderLineItem__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>ProductId</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>