force-app/main/default/objects/PurchaseOrderLineItem__c/fields/PurchasePlanItemId__c.field-meta.xml
<CustomField>
    <fullName>PurchasePlanItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Plan Item</label>
    <referenceTo>PurchasePlanLineItem__c</referenceTo>
    <relationshipLabel>Purchase Order Line Item</relationshipLabel>
    <relationshipName>RFXItemId</relationshipName>
    <type>Lookup</type>
</CustomField>