force-app/main/default/objects/PurchaseOrderLineItem__c/fields/ReceiptQuantity__c.field-meta.xml
<CustomField>
    <fullName>ReceiptQuantity__c</fullName>
    <label>Receipt Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>