force-app/main/default/objects/PurchaseOrderLineItem__c/fields/RemainingAmount__c.field-meta.xml
<CustomField>
    <fullName>RemainingAmount__c</fullName>
    <formula>TotalAmount__c -  TotalCumulativeAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Progress Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>