force-app/main/default/objects/PurchaseOrderLineItem__c/fields/RemainingQuantity__c.field-meta.xml
<CustomField>
    <fullName>RemainingQuantity__c</fullName>
    <formula>Quantity__c - ReceiptQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>