force-app/main/default/objects/PurchaseOrderLineItem__c/fields/SkuOption1__c.field-meta.xml
<CustomField>
    <fullName>SkuOption1__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SkuOption1</valueSetName>
    </valueSet>
</CustomField>