force-app/main/default/objects/PurchaseOrderLineItem__c/fields/SkuOption3__c.field-meta.xml
<CustomField>
    <fullName>SkuOption3__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SkuOption3</valueSetName>
    </valueSet>
</CustomField>