force-app/main/default/objects/PurchaseOrderLineItem__c/fields/SkuOption5__c.field-meta.xml
<CustomField>
    <fullName>SkuOption5__c</fullName>
    <label>Sku Option5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SkuOption5</valueSetName>
    </valueSet>
</CustomField>