force-app/main/default/objects/PurchaseOrderLineItem__c/fields/SupplierId__c.field-meta.xml
<CustomField>
    <fullName>SupplierId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Purchase Order Line Item</relationshipLabel>
    <relationshipName>purchaseOrderLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>