force-app/main/default/objects/PurchaseOrderLineItem__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>Tax Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxType</valueSetName>
    </valueSet>
</CustomField>