force-app/main/default/objects/PurchaseOrderLineItem__c/fields/TotalCumulativeAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalCumulativeAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Cumulative Progress Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>